# Auto-PPT

./: .gitattributes  .gitignore  AGENTS.md  README.md  launch.cmd  pyproject.toml
Input/: Asset Policy.md  Chart Strategy.md  Design Refinement Rubric.md  Deterministic Geometry and Template Registry.txt  Judge Set.json  Retrieval Query Cookbook.md  Slide Writing Rubric.md  Template Selection Rules.md
Skills/pptx-indexing/: SKILL.md
Skills/pptx-ingestion/: SKILL.md
Skills/pptx-layout/: SKILL.md
Skills/pptx-planning/: SKILL.md
Skills/pptx-renderer/: SKILL.md
Skills/pptx-tests/: SKILL.md
learnings/: code-review-fixes-2026-04-11.md  export-template-contracts-2026-04-11.md  planning-content-quality-2026-04-10.md  pptx-export-and-template-variety-2026-04-11.md  repo-health-check-2026-04-05.md
pptx_gen/: __init__.py  api.py  api_schemas.py  cli.py  observability.py  pipeline.py  settings.py  store.py
pptx_gen/assets/: __init__.py  chart_renderer.py  resolver.py  unsplash.py
pptx_gen/indexing/: __init__.py  embedder.py  vector_store.py
pptx_gen/ingestion/: __init__.py  chunker.py  parser.py  schemas.py
pptx_gen/layout/: __init__.py  resolver.py  schemas.py  (+1 more)
tests/: conftest.py  test_api.py  test_assets.py  test_bug_regressions.py  test_cli.py  test_ingestion.py  test_ingestion_formats.py  test_layout_templates.py  test_llm_client.py  test_markdown_strip.py  test_pipeline.py  test_planning.py  test_renderer.py  test_schemas.py  test_store.py
ui/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.node.json  vite.config.ts
(+82 files in other folders)
